some image resizing

--- a/app/src/main/res/layout/activity_stream.xml
+++ b/app/src/main/res/layout/activity_stream.xml
@@ -51,6 +51,7 @@
         android:background="#5F9F9F"
         android:layout_height="300dp"
         android:src="@drawable/insta_svg"
+        android:adjustViewBounds="true"
         android:id="@+id/img" />
 
     <!-- comment section -->
