--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,9 @@
 <resources>
-
+<!--
+00688B-->
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
-        <item name="colorPrimary">#00688B</item>
+        <item name="colorPrimary">#2F4F4F</item>
+        <item name="android:textColorPrimary">#FFF</item>
     </style>
 </resources>
