adding dialog frament for comments but having issue to go back to stream loayout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/stream"></ListView>
+            android:id="@+id/stream"
+            ></ListView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
