--- a/app/src/main/res/layout/activity_stream.xml
+++ b/app/src/main/res/layout/activity_stream.xml
@@ -19,7 +19,7 @@
         app:riv_oval="true" />
 
     <TextView
-        android:layout_width="250dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:background="#C1CDCD"
@@ -29,15 +29,17 @@
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/profile_pic"
         android:layout_above="@+id/img"
-        android:paddingLeft="10dp" />
+        android:paddingLeft="10dp"
+        android:layout_toLeftOf="@+id/like_sym_2"
+        android:layout_toStartOf="@+id/like_sym_2" />
 
     <TextView
         android:gravity="center_vertical"
-        android:layout_toRightOf="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#C1CDCD"
         android:drawablePadding="10dp"
+        android:padding="10dp"
         android:layout_above="@+id/img"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -115,5 +117,39 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         />
+
+
+    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/like_sym_2"
+        android:src="@drawable/like_sym_2"
+        android:background="#C1CDCD"
+        app:riv_corner_radius="30dip"
+        app:riv_border_color="#333333"
+        app:riv_mutate_background="true"
+        app:riv_tile_mode="repeat"
+        app:riv_oval="true"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/timestamp"
+        android:layout_toStartOf="@+id/timestamp"
+
+        />
+
+
+    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/like_sym_3"
+        android:src="@drawable/like_sym_3"
+        android:background="#C1CDCD"
+        app:riv_corner_radius="30dip"
+        app:riv_border_color="#333333"
+        app:riv_mutate_background="true"
+        app:riv_tile_mode="repeat"
+        app:riv_oval="true"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/username" />
+
 
 </RelativeLayout>
